--- a/src/index.css
+++ b/src/index.css
@@ -5,16 +5,21 @@ body,
 #root,
 .app,
 
+.header{
+  text-align: center;
+}
 .content {
   height: 100%;
   width: 100%;
   font-family: 'Source Sans Pro', sans-serif;
 }
 .context{
-  width: 100%;
+  width:100%
 }
-
-
+.abc{
+  position: fixed;
+  z-index: 1;
+}
 
 .app{
   display: flex;
