--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,700&display=swap');
-
+/* 
 html,
 body,
 #root,
-.app,
+.app, */
 
 .header{
   text-align: center;
